# voter-model-CVs

./: README.md  pyproject.toml
examples/albert_barabasi/: main.py  plot.py  run_method.py  validation.py
examples/albert_barabasi/data/: cv.pkl  cv_degree_weighted.pkl  cv_optim.npz  cv_optim_degree_weighted.npz  data_validate.npz  mmd_validate.npy  mmd_validate_full.npy  params.pkl  x_levelset.npy  xi.npy
examples/regular/: main.py  plot.py  run_method.py
examples/ring/: main.py  plot.py  run_method.py  validation.py
examples/ring/data/: cv.pkl  cv_optim.npz  data_validate_full.npz  mmd_validate.npy  mmd_validate_full.npy  params.pkl  x_levelset.npy  xi.npy
examples/stochastic_block_model/: main.py  plot.py  run_method.py  validation.py
examples/stochastic_block_model/data/: cv.pkl  cv_optim.npz  mmd_validate.npy  mmd_validate_full.npy  params.pkl  x_levelset.npy  xi.npy
interpretable_cvs/: __init__.py  create_anchor_points.py  linear_regression.py  sample_cnvm.py  transition_manifold.py
interpretable_cvs/validation/: build_levelsets.py  validate_mean_var.py  validate_mmd.py  validate_random_functions.py
